--- a/templates/partners.html
+++ b/templates/partners.html
@@ -25,6 +25,11 @@
             <br>
             <center><a style="color: black; text-decoration: none" href="http://vayes.com.tr">Vayes</a></center>
         </div>
+        <div style="float: left; width: 15%; margin-left: 2%">
+            <img src="/logos/sempeak.jpg" style="width: 100%" alt="">
+            <br>
+            <center><a style="color: black; text-decoration: none" href="https://www.sempeak.com">Sempeak</a></center>
+        </div>
     </div>
 </body>
 </html>
