--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -68,7 +68,7 @@
                 document.getElementById("shapead").value = "inadsquare"
               }
               else if(output.width - output.height < 0){
-                document.getElementById("shapead").value = "inadsquare"
+                document.getElementById("shapead").value = "inadsbanner"
               }
               else if(output.width - output.height > 0){
                 document.getElementById("shapead").value = "inadstandard"
