--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -47,7 +47,7 @@
             <select class="mainFormBig" name="typeAd" id="shapead">
                 <option value="inadsbanner">Banner- Typically for vertically placed ads</option>
                 <option value="inadstandard">Rectangle - Typically for horizontally placed ads</option>
-                <option value="inadsquare">Square - Typically for evenly distributed</option>
+                <option value="inadsquare">Square - Typically for ads with evenly distributed width and height</option>
             </select>
             <hr>
             <br>
