--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -54,6 +54,7 @@
             <input class="buttonBlue" style="width: 25%" type=submit value="Start Campaign">
         </form>
         <br>
+        <h3>Preview</h3>
         <img id="output" src="" alt="">
         <p id="sizes"></p>
     </div>
