--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -54,7 +54,7 @@
             <input class="buttonBlue" style="width: 25%" type=submit value="Start Campaign">
         </form>
         <br>
-        <h3 hidden="true" id="prehead">Pre<div style="color: yellow">view</div></h3>
+        <h3 hidden="true" id="prehead">Pre<span style="color: yellow">view</span></h3>
         <br>
         <img id="output" src="" alt="">
         <p id="sizes"></p>
