--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -56,6 +56,7 @@
         <br>
         <h3 hidden="true" id="prehead">Pre<span style="color: yellow">view</span></h3>
         <br>
+        <a><small style="font-size: 6px;">Ads by <span style="color: black;">InAds</span></small></a><br>
         <img id="output" src="" alt="">
         <p id="sizes"></p>
     </div>
