--- a/templates/500.html
+++ b/templates/500.html
@@ -3,6 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="1">
     <title>500 Server Error</title>
 </head>
 <body style="font-family: Open Sans;">
