--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -11,20 +11,20 @@
         <div style="color: black; margin-left: 25%;">
             <br>
             <div style="font-size: 80%">{{ user.email }}</div>
-            <a style="margin-top: 30%" href="/dashboard" class="navbarElement">Dashboard</a>
+            <a style="margin-top: 30%" href="https://inadsglobal.com/dashboard" class="navbarElement">Dashboard</a>
             <br>
-            <a style="margin-top: 10%" href="/advertise" class="navbarElement">Start a campaign</a>
+            <a style="margin-top: 10%" href="https://inadsglobal.com/advertise" class="navbarElement">Start a campaign</a>
             <br>
-            <a style="margin-top: 10%" href="/load_money" class="navbarElement">Increase Account Balance</a>
+            <a style="margin-top: 10%" href="https://inadsglobal.com/load_money" class="navbarElement">Increase Account Balance</a>
             <br>
-            <a style="margin-top: 10%" href="/account" class="navbarElement">Account</a>
+            <a style="margin-top: 10%" href="https://inadsglobal.com/account" class="navbarElement">Account</a>
             <br>
             {% if user.purpose == "Content Creator" %}
-            <a style="margin-top: 10%" href="/add_domain" class="navbarElement">Add Domain</a>
+            <a style="margin-top: 10%" href="https://inadsglobal.com/add_domain" class="navbarElement">Add Domain</a>
             <br>
-            <a style="margin-top: 10%" href="/payout" class="navbarElement">Receive Payout</a>
+            <a style="margin-top: 10%" href="https://inadsglobal.com/payout" class="navbarElement">Receive Payout</a>
             <br>
-            <a style="margin-top: 10%" href="/website_performance" class="navbarElement">Website Performance</a>
+            <a style="margin-top: 10%" href="https://inadsglobal.com/website_performance" class="navbarElement">Website Performance</a>
             {% endif %}
         </div>
     </div>
