--- a/templates/status.html
+++ b/templates/status.html
@@ -37,5 +37,6 @@
         <h3>Dashboard: &#10003; &#x2713; &check;</h3>
         <h3>Database Connections: &#10003; &#x2713; &check;</h3>
         <h3>Website Analytics: &#10003; &#x2713; &check;</h3>
+        <h3>Database Connection Pool: &#10003; &#x2713; &check;</h3>
     </div>
 </body>
