--- a/templates/status.html
+++ b/templates/status.html
@@ -30,13 +30,13 @@
     </div>
 
     <div style="float: left; width: 75%; margin-left: 24%">
-        <h3>Server Running: &#10003; &#x2713; &check;</h3>
-        <h3>Website Updated: &#10003; &#x2713; &check;</h3>
+        <h3>Server Running: <span style="color: green">&check;</span></h3>
+        <h3>Website Updated: <span style="color: green">&check;</span></h3>
         <h3>Adequate number of ads are online: X</h3>
-        <h3>Client Website Connections: &#10003; &#x2713; &check;</h3>
-        <h3>Dashboard: &#10003; &#x2713; &check;</h3>
-        <h3>Database Connections: &#10003; &#x2713; &check;</h3>
-        <h3>Website Analytics: &#10003; &#x2713; &check;</h3>
-        <h3>Database Connection Pool: &#10003; &#x2713; &check;</h3>
+        <h3>Client Website Connections: <span style="color: green">&check;</span></h3>
+        <h3>Dashboard: <span style="color: green">&check;</span></h3>
+        <h3>Database Connections: <span style="color: green">&check;</span></h3>
+        <h3>Website Analytics: <span style="color: green">&check;</span></h3>
+        <h3>Database Connection Pool: <span style="color: green">&check;</span></h3>
     </div>
 </body>
