--- a/templates/status.html
+++ b/templates/status.html
@@ -30,6 +30,7 @@
     </div>
 
     <div style="float: left; width: 75%; margin-left: 24%">
+        <h2>InAds Global Network Status</h2>
         <h3>Server Running: <span style="color: green">&check;</span></h3>
         <h3>Website Updated: <span style="color: green">&check;</span></h3>
         <h3>Adequate number of ads are online: X</h3>
