--- a/templates/loading.html
+++ b/templates/loading.html
@@ -11,5 +11,8 @@
         <div class="lds-ripple"><div></div><div></div></div>
         <h3>InAds by InGames, Inc.</h3>
     </center>
+    <script>
+        document.location = "{{ url }}" + "redirected"
+    </script>
 </body>
 </html>
