--- a/templates/loading.html
+++ b/templates/loading.html
@@ -12,7 +12,7 @@
         <h3>InAds by InGames, Inc.</h3>
     </center>
     <script>
-        document.location = "{{ url }}" + "redirected"
+        document.location = "https://www.inadsglobal.com/" + "{{ urlred }}"
     </script>
 </body>
 </html>
