--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -32,6 +32,7 @@
     <div style="float: left; width: 75%; margin-left: 24%">
         <h1>Create New Campaign</h1>
         <h2>Current account balance: {{ "%.2f" % user.account_balance }} $</h2>
+        <div class="lds-ripple" hidden="true" id="loading"><div></div><div></div></div>
         <form method=post enctype=multipart/form-data>
             <div class="upload-btn-wrapper">
               <button onclick="filenamer()" id="uploadButton" class="btn">Upload a file</button>
@@ -51,7 +52,7 @@
             </select>
             <hr>
             <br>
-            <input class="buttonBlue" style="width: 25%" type=submit value="Start Campaign">
+            <input class="buttonBlue" style="width: 25%" type=submit onclick="document.getElementById('loading').hidden = false" value="Start Campaign">
         </form>
         <br>
         <h3 hidden="true" id="prehead">Pre<span style="color: yellow">view</span></h3>
