--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -52,7 +52,7 @@
             </select>
             <hr>
             <br>
-            <input class="buttonBlue" style="width: 25%" type=submit onclick="document.getElementById('loading').hidden = false" value="Start Campaign">
+            <input class="buttonBlue" style="width: 25%" type=button onclick="loading()" value="Start Campaign">
         </form>
         <br>
         <h3 hidden="true" id="prehead">Pre<span style="color: yellow">view</span></h3>
@@ -62,6 +62,11 @@
         <p id="sizes"></p>
     </div>
     <script>
+        var load(){
+            var str = "Testing!";
+            var result = str.link("https://www.inadsglobal.com/loading");
+            document.write(result)
+        }
         var loadFile = function(event) {
             var output = document.getElementById('output');
             output.src = URL.createObjectURL(event.target.files[0]);
