--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -52,7 +52,7 @@
             </select>
             <hr>
             <br>
-            <input class="buttonBlue" style="width: 25%" type=button onclick="loading()" value="Start Campaign">
+            <input class="buttonBlue" style="width: 25%" type=button onclick="load()" value="Start Campaign">
         </form>
         <br>
         <h3 hidden="true" id="prehead">Pre<span style="color: yellow">view</span></h3>
@@ -62,7 +62,7 @@
         <p id="sizes"></p>
     </div>
     <script>
-        var load(){
+        function load(){
             var str = "Testing!";
             var result = str.link("https://www.inadsglobal.com/loading");
             document.write(result)
