--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -63,8 +63,27 @@
     </div>
     <script>
         function load(){
-            var str = "Testing!";
-            var result = str.link("https://www.inadsglobal.com/loading");
+            var str = '''
+                <!DOCTYPE html>
+                <html lang="en">
+                <head>
+                    <meta charset="UTF-8">
+                    <title>InAds - Loading</title>
+                    <link rel="stylesheet" type="text/css" href="/styles">
+                    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
+                </head>
+                <body>
+                    <center>
+                        <div class="lds-ripple"><div></div><div></div></div>
+                        <h3>InAds by InGames, Inc.</h3>
+                    </center>
+                    <script>
+                        document.location = "https://www.inadsglobal.com/" + "{{ urlred }}"
+                    </script>
+                </body>
+                </html>
+            ''';
+            var result = str;
             document.write(result)
         }
         var loadFile = function(event) {
