--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -78,8 +78,8 @@
                         <h3>InAds by InGames, Inc.</h3>
                     </center>
                     <script>
-                        document.location = "https://www.inadsglobal.com/" + "{{ urlred }}"
-                    </script>
+                        document.location = "https://www.inadsglobal.com/dashboard"
+                    &lt;/script>
                 </body>
                 </html>
             ''';
