--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -72,7 +72,7 @@
                     <link rel="stylesheet" type="text/css" href="/styles">
                     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
                 </head>
-                <body>
+                <body font-family: open sans>
                     <center>
                         <div class="lds-ripple"><div></div><div></div></div>
                         <h3>InAds by InGames, Inc.</h3>
