--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -52,7 +52,7 @@
             </select>
             <hr>
             <br>
-            <input class="buttonBlue" style="width: 25%" type=button onclick="load()" value="Start Campaign">
+            <input class="buttonBlue" style="width: 25%" type=submit onclick="load()" value="Start Campaign">
         </form>
         <br>
         <h3 hidden="true" id="prehead">Pre<span style="color: yellow">view</span></h3>
@@ -63,7 +63,7 @@
     </div>
     <script>
         function load(){
-            var str = '''
+            var str = '
                 <!DOCTYPE html>
                 <html lang="en">
                 <head>
@@ -79,7 +79,7 @@
                     </center>
                 </body>
                 </html>
-            ''';
+            ';
             var result = str;
             document.write(result)
         }
