--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -65,7 +65,7 @@
 
         function loadingpre(){
             fetch('https://www.inadsglobal.com/loading')
-            .then(response => response.json())
+            .then(response => response.text())
             .then(data => load(data))
         }
 
