--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -71,7 +71,7 @@
 
         function load(data){
             var str = data;
-            document.write(result)
+            document.write(str)
         }
         var loadFile = function(event) {
             var output = document.getElementById('output');
