--- a/templates/loading.html
+++ b/templates/loading.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="/styles">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
-<body>
-    <center>
-        <div class="lds-ripple"><div></div><div></div></div>
+<body style="font-family: open sans">
+    <center style="margin-top: 20%">
+        <div class="loader"><div></div><div></div></div>
         <h3>InAds by InGames, Inc.</h3>
     </center>
 </body>
