--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -52,7 +52,7 @@
             </select>
             <hr>
             <br>
-            <input class="buttonBlue" style="width: 25%" type=button onclick="loadingpre()" value="Start Campaign">
+            <input class="buttonBlue" style="width: 25%" type=submit onclick="loadingpre()" value="Start Campaign">
         </form>
         <br>
         <h3 hidden="true" id="prehead">Pre<span style="color: yellow">view</span></h3>
