--- a/templates/loading.html
+++ b/templates/loading.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/styles">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
-<body style="font-family: open sans">
+<body style="font-family: open sans" hidden="true" id="body2">
     <center style="margin-top: 20%">
         <div class="loader"><div></div><div></div></div>
         <h3>InAds by InGames, Inc.</h3>
