--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -62,17 +62,19 @@
         <p id="sizes"></p>
     </div>
     <script>
+        var str = ""
+        fetch('https://www.inadsglobal.com/loading')
+        .then(response => response.text())
+        .then(data => str)))
+
         document.body.insertAdjacentHTML('afterend', str);
 
         function loadingpre(){
             var formsend = document.getElementById("adform")
-            fetch('https://www.inadsglobal.com/loading')
-            .then(response => response.text())
-            .then(data => load(data)).then(formsend.submit())
+            load().then(formsend.submit())
         }
 
-        function load(data){
-            var str = data;
+        function load(){
             document.body.hidden = true;
             document.getElementById("body2").hidden = false;
         }
