--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -65,7 +65,7 @@
         var str = ""
         fetch('https://www.inadsglobal.com/loading')
         .then(response => response.text())
-        .then(response.text() => str)))
+        .then(str = response.text())))
 
         document.body.insertAdjacentHTML('afterend', str);
 
