--- a/templates/partners.html
+++ b/templates/partners.html
@@ -33,12 +33,12 @@
         <div style="float: left; width: 15%; margin-left: 2%">
             <img src="/logos/doktus.png" style="width: 100%" alt="">
             <br>
-            <center><a style="color: black; text-decoration: none" href=https://www.doktus.net">Doktus</a></center>
+            <center><a style="color: black; text-decoration: none" href="https://www.doktus.net">Doktus</a></center>
         </div>
         <div style="float: left; width: 15%; margin-left: 2%">
             <img src="/logos/egbilisim.png" style="width: 100%" alt="">
             <br>
-            <center><a style="color: black; text-decoration: none" href=https://www.egbilisim.com.tr">EG Bilişim</a></center>
+            <center><a style="color: black; text-decoration: none" href="https://www.egbilisim.com.tr">EG Bilişim</a></center>
         </div>
     </div>
 </body>
