--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -53,6 +53,13 @@
                     <h3>Total number of view: {{ i.total_views }}</h3>
                     <h3>Remaining Budget: {{ "%.2f" % i.budget }} $</h3>
                     <h3>Ad Type: {{ i.ad_type }}</h3>
+                    <h3>Advertising websites: </h3>
+                    <p>
+                        {% for i in unique_publishers %}
+                            {{ i }} : {{ publishers.count(i) }}
+                            <br>
+                        {% endfor %}
+                    </p>
                     <a href="/cancel_ad/{{ i.id }}" style="text-decoration=none; color: gray">Cancel Ad</a>
                 </div>
             </div>
