--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -39,7 +39,7 @@
     </div>
     <div style="float: left; width: 79%; margin-left: 20%">
         <h1>Ad Information</h1>
-            <button style="margin-left: 10%; width: 80%" class="accordion">{{ i.advertiserwebsite }}</button>
+            <button style="margin-left: 10%; width: 80%" class="accordion">{{ ads.advertiserwebsite }}</button>
             <div style="margin-left: 10%" class="panel">
                 <div>
                     <h3>{{ ads.advertiserwebsite }}</h3>
@@ -59,13 +59,7 @@
                 </div>
             </div>
         {% endfor %}
-        {% if numberofads < 1 %}
-        <h2 style="margin-left: 5%; margin-top: 10%">You have no campaigns yet. <a href="/advertise" style="color: gray; text-decoration: none">Create One</a></h2>
-        {% endif %}
         <br>
-        {% if user.purpose == "Content Creator" %}
-        <small style="margin-left: 5%; margin-top: 10%">Due to high demand from content creators there may not be an available ad for every ad space every time. This situation is temporary and it will be solved by the end of March.</small>
-        {% endif %}
     </div>
     <script>
         var acc = document.getElementsByClassName("accordion");
