--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div style="float: left; width: 79%; margin-left: 20%">
-        <h1>Ad Information</h1>
+        <h1 style="margin-left: 5%">Ad Information</h1>
             <button style="margin-left: 10%; width: 80%" class="accordion">{{ ads.advertiserwebsite }}</button>
             <div style="margin-left: 10%" class="panel">
                 <div>
