--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -55,6 +55,15 @@
                             <br>
                         {% endfor %}
                     </p>
+                    <form method="post">
+                        <input class="mainFormBig" type=text name=keywords placeholder="Change keywords (Keywords with '/' in between.)">
+                        <hr>
+                        <br>
+                        <input class="buttonBlue" style="width: 25%" type=submit value="Change Keywords">
+                    </form>
+                    {% if numberofads < 5%}
+                        <small>You are using too few keywords this may result in a high rate of inconsistency
+                            and inaccuracy with targeted ads.</small>
                 </div>
             </div>
         <br>
