--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -61,9 +61,10 @@
                         <br>
                         <input class="buttonBlue" style="width: 25%" type=submit value="Change Keywords">
                     </form>
-                    {% if numberofads < 5%}
+                    {% if numberofads < 5 %}
                         <small>You are using too few keywords this may result in a high rate of inconsistency
                             and inaccuracy with targeted ads.</small>
+                    {% endif %}
                 </div>
             </div>
         <br>
