--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -75,7 +75,7 @@
                     <h3>Average CPM: {{ average_cpm }}</h3>
                     <h3>Average CPC: {{ average_cpc }}</h3>
                     <h3>Total Spending: {{ total_spending }}</h3>
-                    <h3>Ad Click Rate: {{ click_rate }}</h3>
+                    <h3>Ad Click Rate: 1 / {{ click_rate }}</h3>
                     <h3>Average CPM for similar keywords: {{ average_cpm_of_keywords }}</h3>
                 </div>
             </div>
