--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -80,7 +80,7 @@
                     {% if paused %}
                         <a href="/unpause/{{ ads.id }}" style="text-decoration=none; color: gray">Unpause ad</a>
                     {% elif not paused %}
-                        <a href="/pause/{{ ads.id }}" style="text-decoration=none; color: gray">Unpause ad</a>
+                        <a href="/pause/{{ ads.id }}" style="text-decoration=none; color: gray">Pause ad</a>
                     {% endif %}
                 </div>
             </div>
