--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -67,6 +67,11 @@
                         <hr>
                         <br>
                         <input class="buttonBlue" style="width: 40%" type=submit value="Change Keywords">
+                        <br>
+                        <input class="mainFormBig" style="width: 100%" type=text name=keywords placeholder="Blacklisted Websites for this ad: (Websites with '/' in between.)">
+                        <hr>
+                        <br>
+                        <input class="buttonBlue" style="width: 40%" type=submit value="Send Blacklist Request">
                     </form>
                     {% if numberofads < 5 %}
                         <small>You are using too few keywords this may result in a high rate of inconsistency
