--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -70,7 +70,7 @@
                         <br>
                         <br>
                         <br>
-                        <input class="mainFormBig" style="width: 100%" type=text name=keywords placeholder="Blacklisted Websites for this ad: (Websites with '/' in between.)">
+                        <input class="mainFormBig" style="width: 100%" type=text name=bannedwebsites placeholder="Blacklisted Websites for this ad: (Websites with '/' in between.)">
                         <hr>
                         <br>
                         <input class="buttonBlue" style="width: 40%" type=submit value="Send Blacklist Request">
